[Media Router] Remove sink from current_sinks_map_ only when all retry attempts fail

In existing code we remove a sink from |current_sinks_map_| when an open
channel request (single retry attempt) fails. It removes sinks and routes
from extension side, which may terminate Youtube session too early.
Changed it to remove sink only when all retry attempts fail.

Bug: 775244
Change-Id: I7a881fdb15122a71a0963d9aee6c04744239828a